# LearnOpenGL_GLFW

./: CMakeLists.txt  main.cpp
src/1.getting_started/1.1.hello_window/: hello_window.cpp
src/1.getting_started/2.1.hello_triangle/: hello_triangle.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
src/1.getting_started/2.3.hello_triangle_exercise_001/: hello_triangle_exercise_001.cpp
src/1.getting_started/2.3.hello_triangle_exercise_002/: hello_triangle_exercise_002.cpp
src/1.getting_started/2.5.hello_triangle_exercise_003/: hello_triangle_exercise_003.cpp
src/1.getting_started/3.1.shade_input_output/: shade_input_output.cpp
src/1.getting_started/3.2.shade_uniform/: shade_uniform.cpp
src/1.getting_started/3.3.shade_input_output_002/: shade_input_output_002.cpp
src/1.getting_started/3.4.shade_class/: shade_class.cpp  shader.1.3.4.fs  shader.1.3.4.vs
src/1.getting_started/3.5.shade_exercise_001/: shade_exercise_001.cpp
src/1.getting_started/3.6.shade_exercise_002/: shade_exercise_002.cpp  shader.1.3.6.fs  shader.1.3.6.vs
src/1.getting_started/3.7.shade_exercise_003/: shade_exercise_003.cpp  shader.1.3.7.fs  shader.1.3.7.vs
